--- a/servicestandards-fr.html
+++ b/servicestandards-fr.html
@@ -5,32 +5,37 @@
 <meta charset="utf-8">
 <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW)
 wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-<title>Canada.ca theme - Canada.ca</title>
+<title>[Institution name] service performance reporting for fiscal year 2015 to 2016 - Canada.ca</title>
 <meta content="width=device-width,initial-scale=1" name="viewport">
 <!-- Meta data -->
 <meta name="description" content="Web Experience Toolkit (WET) includes reusable components for building and maintaining innovative Web sites that are accessible, usable, and interoperable. These reusable components are open source software and free for use by departments and external Web communities">
 <!-- Meta data-->
 <!--[if gte IE 9 | !IE ]><!-->
-<link href="./GCWeb/assets/favicon.ico" rel="icon" type="image/x-icon">
-<link rel="stylesheet" href="./GCWeb/css/theme.min.css">
+<link href="GCWeb/assets/favicon.ico" rel="icon" type="image/x-icon">
+<link rel="stylesheet" href="GCWeb/css/theme.min.css">
 <!--<![endif]-->
 <!--[if lt IE 9]>
-<link href="./GCWeb/assets/favicon.ico" rel="shortcut icon" />
+<link href="GCWeb/assets/favicon.ico" rel="shortcut icon" />
 
-<link rel="stylesheet" href="./GCWeb/css/ie8-theme.min.css" />
+<link rel="stylesheet" href="GCWeb/css/ie8-theme.min.css" />
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-<script src="./wet-boew/js/ie8-wet-boew.min.js"></script>
+<script src="wet-boew/js/ie8-wet-boew.min.js"></script>
 <![endif]-->
 <!--[if lte IE 9]>
 
 
 <![endif]-->
-<noscript><link rel="stylesheet" href="./wet-boew/css/noscript.min.css" /></noscript>
+<noscript><link rel="stylesheet" href="wet-boew/css/noscript.min.css" /></noscript>
 <!-- Google Tag Manager DO NOT REMOVE OR MODIFY - NE PAS SUPPRIMER OU MODIFIER -->
 <script>dataLayer1 = [];</script>
 <!-- End Google Tag Manager -->
+<style>
+
+p, li {max-width:60em;}
+
+</style>
 </head>
-<body vocab="http://schema.org/" typeof="WebPage">
+<body class="theme" vocab="http://schema.org/" typeof="WebPage">
 <!-- Google Tag Manager DO NOT REMOVE OR MODIFY - NE PAS SUPPRIMER OU MODIFIER -->
 <noscript><iframe title="Google Tag Manager" src="//www.googletagmanager.com/ns.html?id=GTM-TLGQ9K" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start': new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0], j=d.createElement(s),dl=l!='dataLayer1'?'&l='+l:'';j.async=true;j.src='//www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);})(window,document,'script','dataLayer1','GTM-TLGQ9K');</script>
@@ -50,14 +55,14 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 <div class="row">
 <div class="col-md-12">
 <ul class="list-inline margin-bottom-none">
-<li><a lang="fr" href="index-fr.html">Français</a></li>
+<li><a lang="fr" href="widgets-fr.html">Français</a></li>
 </ul>
 </div>
 </div>
 </section>
 <div class="row">
 <div class="brand col-xs-8 col-sm-9 col-md-6">
-<a href="https://www.canada.ca/en.html"><object type="image/svg+xml" tabindex="-1" data="./GCWeb/assets/sig-blk-en.svg"></object><span class="wb-inv"> Government of Canada</span></a>
+<a href="https://www.canada.ca/en.html"><object type="image/svg+xml" tabindex="-1" data="GCWeb/assets/sig-blk-en.svg"></object><span class="wb-inv"> Government of Canada</span></a>
 </div>
 <section class="wb-mb-links col-xs-4 col-sm-3 visible-sm visible-xs" id="wb-glb-mn">
 <h2>Search and menus</h2>
@@ -84,7 +89,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 </section>
 </div>
 </div>
-<nav role="navigation" id="wb-sm" data-ajax-replace="./ajax/sitemenu-en.html" data-trgt="mb-pnl" class="wb-menu visible-md visible-lg" typeof="SiteNavigationElement">
+<nav role="navigation" id="wb-sm" data-ajax-replace="ajax/sitemenu-en.html" data-trgt="mb-pnl" class="wb-menu visible-md visible-lg" typeof="SiteNavigationElement">
 <div class="container nvbar">
 <h2>Topics menu</h2>
 <div class="row">
@@ -106,82 +111,114 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 <div class="container">
 <div class="row">
 <ol class="breadcrumb">
-<li><a href="https://www.canada.ca/en.html">Home</a></li>
+<li><a href="https://www.canada.ca/en.html">Home</a></li><li><a href="#">[Institution name]</a></li>
 </ol>
 </div>
 </div>
 </nav>
 </header>
 <main role="main" property="mainContentOfPage" class="container">
-<h1 property="name" id="wb-cont">Canada.ca theme - GC-PROTO</h1>
-<p>
-<a class="btn btn-primary" href="docs/ref/GCWeb/GCWeb-en.html">Documentation</a>
-<a class="btn btn-primary" href="https://github.com/wet-boew/GCWeb/issues/new?title=Canada.ca%20theme:%20">Questions or comments?</a>
-</p>
-<section>
-<h2>English</h2>
+<h1 property="name" id="wb-cont">Rapport sur la qualité de service pour l’exercice 2015-2016 de [Nom de l’organisation]</h1>
+<p class="gc-byline"><strong>De <a href="#">[Nom de l’organisation]</a></strong></p>
+
+<h2>Sur cette page</h2>
+
 <ul>
-<li><a href="home-en.html">Home page</a></li>
-<li><a href="theme-en.html">Theme landing page</a></li>
-<li><a href="topic-en.html">Topic landing page</a></li>
-<li><a href="institution-en.html">Institutional profile for large institutions</a></li>
-<li><a href="institution-small-en.html">Institutional profile for small institutions</a></li>
-<li><a href="content-en.html">Content page</a></li>
-<li><a href="content-signedoff-en.html">Content page - Signed Off</a></li>
-<li><a href="content-signedon-en.html">Content page - Signed On</a></li>
-<li><a href="components-en.html">Components page</a></li>
-<li><a href="video-en.html">Video content page</a></li>
-<li><a href="feedback-en.html">Feedback form</a></li>
-<li><a href="widgets-en.html">Widget page</a></li>
-<li><a href="localnav/task1/index-en.html">Section menu examples</a></li>
-<li><a href="splashpage.html">Splash page</a></li>
-<li><a href="servermessage-en.html">Server message page</a></li>
-<li><a href="servermessage-en-fr.html">Server message page (English/French)</a></li>
-<li><a href="campaign-en.html">Campaign</a></li>
-<li><a href="event-en.html">Event</a></li>
-<li><a href="service-en.html">Simple service initiation landing page</a></li>
-<li><a href="advancedservice/index-en.html">Advanced service initiation pages</a></li>
-<li><a href="dept-en.html">Departments and agencies</a></li>
-<li><a href="ministerial-en.html">Ministerial profile</a></li>
-<li><a href="act-en.html">Acts</a></li>
-<li><a href="regulations-en.html">Regulations</a></li>
-<li><a href="topic-lowest-en.html">Lowest level topic page</a></li>
-<li><a href="organizational-en.html">Organizational profile</a></li>
-<li><a href="organizational-carousel-en.html">Organizational profile with carousel</a></li>
-<li><a href="archived-en.html">Archived page</a></li>
+<li><a href="#serviceun">[Nom du service un]</a></li>
+<li><a href="#servicedeux">[Nom du service deux]</a></li>
+<li><a href="#servicetrois">[Nom du service trois]</a></li>
 </ul>
-</section>
-<section>
-<h2>French</h2>
+
+<p><br />Les normes de service fixent le niveau de rendement auquel les citoyens peuvent raisonnablement s’attendre dans des circonstances normales. Dans le cadre de son engagement à toujours mieux servir ses clients, [Nom de l’institution] a établi des normes pour ses services.</p>
+
+<p>Nous avons dépassé nos cibles de rendement pour 89 % des services que nous offrons. Vous trouverez ci-dessous des renseignements détaillés concernant nos résultats.</p>
+
+
+
+
+<h2 id="serviceun">[Nom du service un]</h2>
+
+<p><strong>Nous avons atteint 100 % des cibles de rendement que nous nous étions fixées pour le [Nom du service un]</strong></p>
+
+<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.</p>
+
+<h3>Temps d’attente pour le traitement des demandes</h3>
+
+<h4>Demandes présentées en personne dans un point de service</h4>
+
 <ul>
-<li><a href="home-fr.html">Home page</a></li>
-<li><a href="theme-fr.html">Theme landing page</a></li>
-<li><a href="topic-fr.html">Topic landing page</a></li>
-<li><a href="institution-fr.html">Institutional profile for large institutions</a></li>
-<li><a href="institution-small-fr.html">Institutional profile for small institutions</a></li>
-<li><a href="content-fr.html">Content page</a></li>
-<li><a href="components-fr.html">Components page</a></li>
-<li><a href="video-fr.html">Video content page</a></li>
-<li><a href="feedback-fr.html">Feedback form</a></li>
-<li><a href="widgets-fr.html">Widget page</a></li>
-<li><a href="localnav/task1/index-fr.html">Section menu examples</a></li>
-<li><a href="splashpage.html">Splash page</a></li>
-<li><a href="servermessage-fr.html">Server message page</a></li>
-<li><a href="servermessage-fr-en.html">Server message page (French/English)</a></li>
-<li><a href="campaign-fr.html">Campaign</a></li>
-<li><a href="event-fr.html">Event</a></li>
-<li><a href="service-fr.html">Simple service initiation landing page</a></li>
-<li><a href="advancedservice/index-fr.html">Advanced service initiation pages</a></li>
-<li><a href="dept-fr.html">Departments and agencies</a></li>
-<li><a href="ministerial-fr.html">Ministerial profile</a></li>
-<li><a href="act-fr.html">Acts</a></li>
-<li><a href="regulations-fr.html">Regulations</a></li>
-<li><a href="topic-lowest-fr.html">Lowest level topic page</a></li>
-<li><a href="organizational-fr.html">Organizational profile</a></li>
-<li><a href="organizational-carousel-fr.html">Organizational profile with carousel</a></li>
-<li><a href="archived-fr.html">Archived page</a></li>
+<li><strong>Notre norme :</strong>  traiter les demandes dans les 35 jours ouvrables suivant leur présentation</li>
+<li><strong>Notre cible :</strong>  respecter la norme pour au moins 90 % des demandes</li>
+<li><strong>Notre rendement pour 2015-2016 :</strong> 96 % des demandes ont été traitées dans les 35 jours ouvrables prévus par la norme</li>
 </ul>
-</section>
+
+<h4>Demandes présentées par courriel</h4>
+
+<ul>
+<li><strong>Notre norme :</strong>  traiter les demandes dans les 40 jours ouvrables suivant leur présentation</li>
+<li><strong>Notre cible :</strong>  respecter la norme pour au moins 90 % des demandes</li>
+<li><strong>Notre rendement pour 2015-2016 :</strong>  98 %  des demandes ont été traitées dans les 40 jours ouvrables prévus par la norme</li>
+</ul>
+
+
+
+
+<h2 id="servicedeux">[Nom du service deux]</h2>
+
+<p><strong>Nous avons atteint 95 % des cibles de rendement que nous nous étions fixées pour le [Nom du service deux]</strong></p>
+
+<p>Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur.</p>
+
+<h3>Temps d’attente au téléphone</h3>
+
+<ul>
+<li><strong>Notre norme :</strong>  Notre objectif est qu'un agent réponde aux appels dans les 10 minutes</li>
+<li><strong>Notre cible :</strong>  respecter cette norme dans 95 % des cas</li>
+<li><strong>Notre rendement pour 2015-2016 :</strong>  98 %  des demandes ont été traitées dans les 10 minutes ouvrables prévus par la norme</li>
+</ul>
+
+
+
+
+
+<h2 id="servicetrois">[Nom du service trois]</h2>
+
+<p><strong>Nous avons atteint 89 % des cibles de rendement que nous nous étions fixées pour le [Nom du service deux]</strong></p>
+
+<p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga.</p>
+
+<h3>Application processing wait times</h3>
+
+<h4>Demandes présentées en ligne</h4>
+
+<ul>
+<li><strong>Notre norme :</strong>  traiter les demandes dans les 20 jours ouvrables suivant leur présentation</li>
+<li><strong>Notre cible :</strong>  respecter la norme pour au moins 85 % des demandes</li>
+<li><strong>Notre rendement pour 2015-2016 :</strong>  89% des demandes ont été traitées dans les 20 jours ouvrables prévus par la norme</li>
+</ul>
+
+<h4>Demandes présentées par courriel</h4>
+
+<ul>
+<li><strong>Notre norme :</strong>  traiter les demandes dans les 25 jours ouvrables suivant leur présentation</li>
+<li><strong>Notre cible :</strong>  respecter la norme pour au moins 85 % des demandes</li>
+<li><strong>Notre rendement pour 2015-2016 :</strong>  89 %  des demandes ont été traitées dans les 25 jours ouvrables prévus par la norme</li>
+</ul>
+
+
+
+<p>&nbsp;</p>
+
+<h2>Qualité de service pour les exercices antérieurs</h2>
+
+<ul>
+<li><a href="#">Rapport sur la qualité de service pour l’exercice 2014-2015 de [Nom de l’organisation]</a></li>
+<li><a href="#">Rapport sur la qualité de service pour l’exercice 2013-2014 de [Nom de l’organisation]</a></li>
+</ul>
+
+<p>&nbsp;</p>
+
+
 <div class="row pagedetails">
 <div class="col-sm-6 col-lg-4 mrgn-tp-sm">
 <a href="https://www.canada.ca/en/report-problem.html" class="btn btn-default btn-block">Report a problem or mistake on this page</a>
@@ -192,7 +229,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 <div class="datemod col-xs-12 mrgn-tp-lg">
 <dl id="wb-dtmd">
 <dt>Date modified:&#32;</dt>
-<dd><time property="dateModified">2014-10-25</time></dd>
+<dd><time property="dateModified">2017-06-01</time></dd>
 </dl>
 </div>
 </div>
@@ -203,21 +240,21 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 <section class="col-lg-4 col-md-6 mrgn-bttm-md">
 <a rel="external" href="#">
 <h3 class="h5">[Activities and initiatives hyperlink text]</h3>
-<img class="img-responsive thumbnail mrgn-bttm-sm" src="./img/features/355x113.png" alt="">
+<img class="img-responsive thumbnail mrgn-bttm-sm" src="img/features/355x113.png" alt="">
 </a>
 <p>Brief description of the initiative, task or information being promoted.</p>
 </section>
 <section class="col-lg-4 col-md-6 mrgn-bttm-md">
 <a rel="external" href="#">
 <h3 class="h5">[Activities and initiatives hyperlink text]</h3>
-<img class="img-responsive thumbnail mrgn-bttm-sm" src="./img/features/355x113.png" alt="">
+<img class="img-responsive thumbnail mrgn-bttm-sm" src="img/features/355x113.png" alt="">
 </a>
 <p>Brief description of the initiative, task or information being promoted.</p>
 </section>
 <section class="col-lg-4 col-md-6 mrgn-bttm-md">
 <a rel="external" href="#">
 <h3 class="h5">[Activities and initiatives hyperlink text]</h3>
-<img class="img-responsive thumbnail mrgn-bttm-sm" src="./img/features/355x113.png" alt="">
+<img class="img-responsive thumbnail mrgn-bttm-sm" src="img/features/355x113.png" alt="">
 </a>
 <p>Brief description of the initiative, task or information being promoted.</p>
 </section>
@@ -256,7 +293,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 <a href="#wb-cont">Top of Page <span class="glyphicon glyphicon-chevron-up"></span></a>
 </div>
 <div class="col-xs-6 col-md-2 text-right">
-<object type="image/svg+xml" tabindex="-1" role="img" data="./GCWeb/assets/wmms-blk.svg" aria-label="Symbol of the Government of Canada"></object>
+<object type="image/svg+xml" tabindex="-1" role="img" data="GCWeb/assets/wmms-blk.svg" aria-label="Symbol of the Government of Canada"></object>
 </div>
 </div>
 </div>
@@ -264,12 +301,12 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 </footer>
 <!--[if gte IE 9 | !IE ]><!-->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.js"></script>
-<script src="./wet-boew/js/wet-boew.min.js"></script>
+<script src="wet-boew/js/wet-boew.min.js"></script>
 <!--<![endif]-->
 <!--[if lt IE 9]>
-<script src="./wet-boew/js/ie8-wet-boew2.min.js"></script>
+<script src="wet-boew/js/ie8-wet-boew2.min.js"></script>
 
 <![endif]-->
-<script src="./GCWeb/js/theme.min.js"></script>
+<script src="GCWeb/js/theme.min.js"></script>
 </body>
 </html>
