Some initial weather setup

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta charset="utf-8">
 <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW)
 wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-<title>Canada.ca theme - Canada.ca</title>
+<title>Weather Optimization</title>
 <meta content="width=device-width,initial-scale=1" name="viewport">
 <!-- Meta data -->
 <meta name="description" content="Web Experience Toolkit (WET) includes reusable components for building and maintaining innovative Web sites that are accessible, usable, and interoperable. These reusable components are open source software and free for use by departments and external Web communities">
@@ -113,74 +113,10 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 </nav>
 </header>
 <main role="main" property="mainContentOfPage" class="container">
-<h1 property="name" id="wb-cont">Canada.ca theme - GC-PROTO</h1>
-<p>
-<a class="btn btn-primary" href="docs/ref/GCWeb/GCWeb-en.html">Documentation</a>
-<a class="btn btn-primary" href="https://github.com/wet-boew/GCWeb/issues/new?title=Canada.ca%20theme:%20">Questions or comments?</a>
-</p>
+<h1 property="name" id="wb-cont">Weather - UI index</h1>
+
 <section>
-<h2>English</h2>
-<ul>
-<li><a href="home-en.html">Home page</a></li>
-<li><a href="theme-en.html">Theme landing page</a></li>
-<li><a href="topic-en.html">Topic landing page</a></li>
-<li><a href="institution-en.html">Institutional profile for large institutions</a></li>
-<li><a href="institution-small-en.html">Institutional profile for small institutions</a></li>
-<li><a href="content-en.html">Content page</a></li>
-<li><a href="content-signedoff-en.html">Content page - Signed Off</a></li>
-<li><a href="content-signedon-en.html">Content page - Signed On</a></li>
-<li><a href="components-en.html">Components page</a></li>
-<li><a href="video-en.html">Video content page</a></li>
-<li><a href="feedback-en.html">Feedback form</a></li>
-<li><a href="widgets-en.html">Widget page</a></li>
-<li><a href="localnav/task1/index-en.html">Section menu examples</a></li>
-<li><a href="splashpage.html">Splash page</a></li>
-<li><a href="servermessage-en.html">Server message page</a></li>
-<li><a href="servermessage-en-fr.html">Server message page (English/French)</a></li>
-<li><a href="campaign-en.html">Campaign</a></li>
-<li><a href="event-en.html">Event</a></li>
-<li><a href="service-en.html">Simple service initiation landing page</a></li>
-<li><a href="advancedservice/index-en.html">Advanced service initiation pages</a></li>
-<li><a href="dept-en.html">Departments and agencies</a></li>
-<li><a href="ministerial-en.html">Ministerial profile</a></li>
-<li><a href="act-en.html">Acts</a></li>
-<li><a href="regulations-en.html">Regulations</a></li>
-<li><a href="topic-lowest-en.html">Lowest level topic page</a></li>
-<li><a href="organizational-en.html">Organizational profile</a></li>
-<li><a href="organizational-carousel-en.html">Organizational profile with carousel</a></li>
-<li><a href="archived-en.html">Archived page</a></li>
-</ul>
-</section>
-<section>
-<h2>French</h2>
-<ul>
-<li><a href="home-fr.html">Home page</a></li>
-<li><a href="theme-fr.html">Theme landing page</a></li>
-<li><a href="topic-fr.html">Topic landing page</a></li>
-<li><a href="institution-fr.html">Institutional profile for large institutions</a></li>
-<li><a href="institution-small-fr.html">Institutional profile for small institutions</a></li>
-<li><a href="content-fr.html">Content page</a></li>
-<li><a href="components-fr.html">Components page</a></li>
-<li><a href="video-fr.html">Video content page</a></li>
-<li><a href="feedback-fr.html">Feedback form</a></li>
-<li><a href="widgets-fr.html">Widget page</a></li>
-<li><a href="localnav/task1/index-fr.html">Section menu examples</a></li>
-<li><a href="splashpage.html">Splash page</a></li>
-<li><a href="servermessage-fr.html">Server message page</a></li>
-<li><a href="servermessage-fr-en.html">Server message page (French/English)</a></li>
-<li><a href="campaign-fr.html">Campaign</a></li>
-<li><a href="event-fr.html">Event</a></li>
-<li><a href="service-fr.html">Simple service initiation landing page</a></li>
-<li><a href="advancedservice/index-fr.html">Advanced service initiation pages</a></li>
-<li><a href="dept-fr.html">Departments and agencies</a></li>
-<li><a href="ministerial-fr.html">Ministerial profile</a></li>
-<li><a href="act-fr.html">Acts</a></li>
-<li><a href="regulations-fr.html">Regulations</a></li>
-<li><a href="topic-lowest-fr.html">Lowest level topic page</a></li>
-<li><a href="organizational-fr.html">Organizational profile</a></li>
-<li><a href="organizational-carousel-fr.html">Organizational profile with carousel</a></li>
-<li><a href="archived-fr.html">Archived page</a></li>
-</ul>
+<p>List the associated pages here for easy reference </p>
 </section>
 <div class="row pagedetails">
 <div class="col-sm-6 col-lg-4 mrgn-tp-sm">
@@ -192,37 +128,13 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 <div class="datemod col-xs-12 mrgn-tp-lg">
 <dl id="wb-dtmd">
 <dt>Date modified:&#32;</dt>
-<dd><time property="dateModified">2014-10-25</time></dd>
+<dd><time property="dateModified">2017-07-22</time></dd>
 </dl>
 </div>
 </div>
 </main>
-<aside class="gc-nttvs container">
-<h2>Government of Canada activities and initiatives</h2>
-<div id="gcwb_prts" class="wb-eqht row">
-<section class="col-lg-4 col-md-6 mrgn-bttm-md">
-<a rel="external" href="#">
-<h3 class="h5">[Activities and initiatives hyperlink text]</h3>
-<img class="img-responsive thumbnail mrgn-bttm-sm" src="./img/features/355x113.png" alt="">
-</a>
-<p>Brief description of the initiative, task or information being promoted.</p>
-</section>
-<section class="col-lg-4 col-md-6 mrgn-bttm-md">
-<a rel="external" href="#">
-<h3 class="h5">[Activities and initiatives hyperlink text]</h3>
-<img class="img-responsive thumbnail mrgn-bttm-sm" src="./img/features/355x113.png" alt="">
-</a>
-<p>Brief description of the initiative, task or information being promoted.</p>
-</section>
-<section class="col-lg-4 col-md-6 mrgn-bttm-md">
-<a rel="external" href="#">
-<h3 class="h5">[Activities and initiatives hyperlink text]</h3>
-<img class="img-responsive thumbnail mrgn-bttm-sm" src="./img/features/355x113.png" alt="">
-</a>
-<p>Brief description of the initiative, task or information being promoted.</p>
-</section>
-</div>
-</aside>
+
+
 <footer role="contentinfo" id="wb-info">
 <nav role="navigation" class="container wb-navcurr">
 <h2 class="wb-inv">About government</h2>
