--- a/canada_e.html
+++ b/canada_e.html
@@ -5,27 +5,27 @@
 <meta charset="utf-8">
 <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW)
 wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-<title>Canada.ca theme - Canada.ca</title>
+<title>Weather Optimization</title>
 <meta content="width=device-width,initial-scale=1" name="viewport">
 <!-- Meta data -->
 <meta name="description" content="Web Experience Toolkit (WET) includes reusable components for building and maintaining innovative Web sites that are accessible, usable, and interoperable. These reusable components are open source software and free for use by departments and external Web communities">
 <!-- Meta data-->
 <!--[if gte IE 9 | !IE ]><!-->
-<link href="GCWeb/assets/favicon.ico" rel="icon" type="image/x-icon">
-<link rel="stylesheet" href="GCWeb/css/theme.min.css">
+<link href="./GCWeb/assets/favicon.ico" rel="icon" type="image/x-icon">
+<link rel="stylesheet" href="./GCWeb/css/theme.min.css">
 <!--<![endif]-->
 <!--[if lt IE 9]>
-<link href="GCWeb/assets/favicon.ico" rel="shortcut icon" />
+<link href="./GCWeb/assets/favicon.ico" rel="shortcut icon" />
 
-<link rel="stylesheet" href="GCWeb/css/ie8-theme.min.css" />
+<link rel="stylesheet" href="./GCWeb/css/ie8-theme.min.css" />
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-<script src="wet-boew/js/ie8-wet-boew.min.js"></script>
+<script src="./wet-boew/js/ie8-wet-boew.min.js"></script>
 <![endif]-->
 <!--[if lte IE 9]>
 
 
 <![endif]-->
-<noscript><link rel="stylesheet" href="wet-boew/css/noscript.min.css" /></noscript>
+<noscript><link rel="stylesheet" href="./wet-boew/css/noscript.min.css" /></noscript>
 <!-- Google Tag Manager DO NOT REMOVE OR MODIFY - NE PAS SUPPRIMER OU MODIFIER -->
 <script>dataLayer1 = [];</script>
 <!-- End Google Tag Manager -->
@@ -57,7 +57,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 </section>
 <div class="row">
 <div class="brand col-xs-8 col-sm-9 col-md-6">
-<a href="https://www.canada.ca/en.html"><object type="image/svg+xml" tabindex="-1" data="GCWeb/assets/sig-blk-en.svg"></object><span class="wb-inv"> Government of Canada</span></a>
+<a href="https://www.canada.ca/en.html"><object type="image/svg+xml" tabindex="-1" data="./GCWeb/assets/sig-blk-en.svg"></object><span class="wb-inv"> Government of Canada</span></a>
 </div>
 <section class="wb-mb-links col-xs-4 col-sm-3 visible-sm visible-xs" id="wb-glb-mn">
 <h2>Search and menus</h2>
@@ -84,7 +84,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 </section>
 </div>
 </div>
-<nav role="navigation" id="wb-sm" data-ajax-replace="ajax/sitemenu-en.html" data-trgt="mb-pnl" class="wb-menu visible-md visible-lg" typeof="SiteNavigationElement">
+<nav role="navigation" id="wb-sm" data-ajax-replace="./ajax/sitemenu-en.html" data-trgt="mb-pnl" class="wb-menu visible-md visible-lg" typeof="SiteNavigationElement">
 <div class="container nvbar">
 <h2>Topics menu</h2>
 <div class="row">
@@ -113,74 +113,10 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 </nav>
 </header>
 <main role="main" property="mainContentOfPage" class="container">
-<h1 property="name" id="wb-cont">Canada.ca theme</h1>
-<p>
-<a class="btn btn-primary" href="docs/ref/GCWeb/GCWeb-en.html">Documentation</a>
-<a class="btn btn-primary" href="https://github.com/wet-boew/GCWeb/issues/new?title=Canada.ca%20theme:%20">Questions or comments?</a>
-</p>
+<h1 property="name" id="wb-cont">Weather - UI index</h1>
+
 <section>
-<h2>English</h2>
-<ul>
-<li><a href="home-en.html">Home page</a></li>
-<li><a href="theme-en.html">Theme landing page</a></li>
-<li><a href="topic-en.html">Topic landing page</a></li>
-<li><a href="institution-en.html">Institutional profile for large institutions</a></li>
-<li><a href="institution-small-en.html">Institutional profile for small institutions</a></li>
-<li><a href="content-en.html">Content page</a></li>
-<li><a href="content-signedoff-en.html">Content page - Signed Off</a></li>
-<li><a href="content-signedon-en.html">Content page - Signed On</a></li>
-<li><a href="components-en.html">Components page</a></li>
-<li><a href="video-en.html">Video content page</a></li>
-<li><a href="feedback-en.html">Feedback form</a></li>
-<li><a href="widgets-en.html">Widget page</a></li>
-<li><a href="localnav/task1/index-en.html">Section menu examples</a></li>
-<li><a href="splashpage.html">Splash page</a></li>
-<li><a href="servermessage-en.html">Server message page</a></li>
-<li><a href="servermessage-en-fr.html">Server message page (English/French)</a></li>
-<li><a href="campaign-en.html">Campaign</a></li>
-<li><a href="event-en.html">Event</a></li>
-<li><a href="service-en.html">Simple service initiation landing page</a></li>
-<li><a href="advancedservice/index-en.html">Advanced service initiation pages</a></li>
-<li><a href="dept-en.html">Departments and agencies</a></li>
-<li><a href="ministerial-en.html">Ministerial profile</a></li>
-<li><a href="act-en.html">Acts</a></li>
-<li><a href="regulations-en.html">Regulations</a></li>
-<li><a href="topic-lowest-en.html">Lowest level topic page</a></li>
-<li><a href="organizational-en.html">Organizational profile</a></li>
-<li><a href="organizational-carousel-en.html">Organizational profile with carousel</a></li>
-<li><a href="archived-en.html">Archived page</a></li>
-</ul>
-</section>
-<section>
-<h2>French</h2>
-<ul>
-<li><a href="home-fr.html">Home page</a></li>
-<li><a href="theme-fr.html">Theme landing page</a></li>
-<li><a href="topic-fr.html">Topic landing page</a></li>
-<li><a href="institution-fr.html">Institutional profile for large institutions</a></li>
-<li><a href="institution-small-fr.html">Institutional profile for small institutions</a></li>
-<li><a href="content-fr.html">Content page</a></li>
-<li><a href="components-fr.html">Components page</a></li>
-<li><a href="video-fr.html">Video content page</a></li>
-<li><a href="feedback-fr.html">Feedback form</a></li>
-<li><a href="widgets-fr.html">Widget page</a></li>
-<li><a href="localnav/task1/index-fr.html">Section menu examples</a></li>
-<li><a href="splashpage.html">Splash page</a></li>
-<li><a href="servermessage-fr.html">Server message page</a></li>
-<li><a href="servermessage-fr-en.html">Server message page (French/English)</a></li>
-<li><a href="campaign-fr.html">Campaign</a></li>
-<li><a href="event-fr.html">Event</a></li>
-<li><a href="service-fr.html">Simple service initiation landing page</a></li>
-<li><a href="advancedservice/index-fr.html">Advanced service initiation pages</a></li>
-<li><a href="dept-fr.html">Departments and agencies</a></li>
-<li><a href="ministerial-fr.html">Ministerial profile</a></li>
-<li><a href="act-fr.html">Acts</a></li>
-<li><a href="regulations-fr.html">Regulations</a></li>
-<li><a href="topic-lowest-fr.html">Lowest level topic page</a></li>
-<li><a href="organizational-fr.html">Organizational profile</a></li>
-<li><a href="organizational-carousel-fr.html">Organizational profile with carousel</a></li>
-<li><a href="archived-fr.html">Archived page</a></li>
-</ul>
+<p>List the associated pages here for easy reference </p>
 </section>
 <div class="row pagedetails">
 <div class="col-sm-6 col-lg-4 mrgn-tp-sm">
@@ -192,37 +128,13 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 <div class="datemod col-xs-12 mrgn-tp-lg">
 <dl id="wb-dtmd">
 <dt>Date modified:&#32;</dt>
-<dd><time property="dateModified">2014-10-25</time></dd>
+<dd><time property="dateModified">2017-07-22</time></dd>
 </dl>
 </div>
 </div>
 </main>
-<aside class="gc-nttvs container">
-<h2>Government of Canada activities and initiatives</h2>
-<div id="gcwb_prts" class="wb-eqht row">
-<section class="col-lg-4 col-md-6 mrgn-bttm-md">
-<a rel="external" href="#">
-<h3 class="h5">[Activities and initiatives hyperlink text]</h3>
-<img class="img-responsive thumbnail mrgn-bttm-sm" src="img/features/355x113.png" alt="">
-</a>
-<p>Brief description of the initiative, task or information being promoted.</p>
-</section>
-<section class="col-lg-4 col-md-6 mrgn-bttm-md">
-<a rel="external" href="#">
-<h3 class="h5">[Activities and initiatives hyperlink text]</h3>
-<img class="img-responsive thumbnail mrgn-bttm-sm" src="img/features/355x113.png" alt="">
-</a>
-<p>Brief description of the initiative, task or information being promoted.</p>
-</section>
-<section class="col-lg-4 col-md-6 mrgn-bttm-md">
-<a rel="external" href="#">
-<h3 class="h5">[Activities and initiatives hyperlink text]</h3>
-<img class="img-responsive thumbnail mrgn-bttm-sm" src="img/features/355x113.png" alt="">
-</a>
-<p>Brief description of the initiative, task or information being promoted.</p>
-</section>
-</div>
-</aside>
+
+
 <footer role="contentinfo" id="wb-info">
 <nav role="navigation" class="container wb-navcurr">
 <h2 class="wb-inv">About government</h2>
@@ -256,7 +168,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 <a href="#wb-cont">Top of Page <span class="glyphicon glyphicon-chevron-up"></span></a>
 </div>
 <div class="col-xs-6 col-md-2 text-right">
-<object type="image/svg+xml" tabindex="-1" role="img" data="GCWeb/assets/wmms-blk.svg" aria-label="Symbol of the Government of Canada"></object>
+<object type="image/svg+xml" tabindex="-1" role="img" data="./GCWeb/assets/wmms-blk.svg" aria-label="Symbol of the Government of Canada"></object>
 </div>
 </div>
 </div>
@@ -264,12 +176,12 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 </footer>
 <!--[if gte IE 9 | !IE ]><!-->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.js"></script>
-<script src="wet-boew/js/wet-boew.min.js"></script>
+<script src="./wet-boew/js/wet-boew.min.js"></script>
 <!--<![endif]-->
 <!--[if lt IE 9]>
-<script src="wet-boew/js/ie8-wet-boew2.min.js"></script>
+<script src="./wet-boew/js/ie8-wet-boew2.min.js"></script>
 
 <![endif]-->
-<script src="GCWeb/js/theme.min.js"></script>
+<script src="./GCWeb/js/theme.min.js"></script>
 </body>
 </html>
