--- a/index.html
+++ b/index.html
@@ -117,6 +117,10 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 
 <section>
 <p>List the associated pages here for easy reference </p>
+
+<ul>
+<li><a href="https://gc-proto.github.io/weather/index_e.html">Weather topic page</a></li>
+<li><a href="https://gc-proto.github.io/weather/city/pages/on-118_metric_e">Ottawa city page</a></li>
 </section>
 <div class="row pagedetails">
 <div class="col-sm-6 col-lg-4 mrgn-tp-sm">
