--- a/city/pages/on-118_metric_e.html
+++ b/city/pages/on-118_metric_e.html
@@ -35,6 +35,12 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 <noscript><iframe title="Google Tag Manager" src="//www.googletagmanager.com/ns.html?id=GTM-TLGQ9K" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start': new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0], j=d.createElement(s),dl=l!='dataLayer1'?'&l='+l:'';j.async=true;j.src='//www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);})(window,document,'script','dataLayer1','GTM-TLGQ9K');</script>
 <!-- End Google Tag Manager -->
+	
+<link rel="alternate" type="application/atom+xml" title="ATOM feed for Ottawa (Kanata - Orléans) - Weather - Environment Canada" href="/rss/city/on-118_e.xml">
+<link rel="alternate" type="application/atom+xml" title="ATOM feed for Ottawa (Kanata - Orléans) - Warning - Environment Canada" href="/rss/warning/on-118_e.xml">
+<link rel="stylesheet" href="/city/styles/city.css">
+<link rel="stylesheet" href="/cacheable/css/city/city_js.css">
+<link rel="stylesheet" href="/template/wxo/css/wxo.css" />
 <ul id="wb-tphp">
 <li class="wb-slc">
 <a class="wb-sl" href="#wb-cont">Skip to main content</a>
