--- a/city/pages/on-118_metric_e.html
+++ b/city/pages/on-118_metric_e.html
@@ -163,7 +163,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
           <li class="brdr-lft">
             <a href="/satellite/index_e.html#goes_east">Satellite</a>
           </li>
-          <li class="brdr-lft">uu
+          <li class="brdr-lft">
             <a href="/lightning/index_e.html">Lightning</a>
           </li>
         </ul>
@@ -470,7 +470,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
             </th>
           </tr>
           <tr>
-            <td><img width="60" height="51" src="/web/20170625161729im_/http://weather.gc.ca/weathericons/09.gif" alt="A few showers or thunderstorms" class="center-block" title="A few showers or thunderstorms"><p class="mrgn-bttm-0"><span class="high wxo-metric-hide" title="max">21&deg;<abbr title="Celsius">C</abbr>
+            <td><img width="60" height="51" src="/weather/weathericons/09.gif" alt="A few showers or thunderstorms" class="center-block" title="A few showers or thunderstorms"><p class="mrgn-bttm-0"><span class="high wxo-metric-hide" title="max">21&deg;<abbr title="Celsius">C</abbr>
                 </span><span class="high wxo-imperial-hide wxo-city-hidden" title="max">70&deg;<abbr title="Fahrenheit">F</abbr>
                 </span>
               </p>
@@ -479,7 +479,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
               </p>
               <p class="mrgn-bttm-0">A few showers or thunderstorms</p>
             </td>
-            <td><img width="60" height="51" src="/web/20170625161729im_/http://weather.gc.ca/weathericons/09.gif" alt="Chance of showers" class="center-block" title="Chance of showers"><p class="mrgn-bttm-0"><span class="high wxo-metric-hide" title="max">20&deg;<abbr title="Celsius">C</abbr>
+            <td><img width="60" height="51" src="/weather/weathericons/09.gif" alt="Chance of showers" class="center-block" title="Chance of showers"><p class="mrgn-bttm-0"><span class="high wxo-metric-hide" title="max">20&deg;<abbr title="Celsius">C</abbr>
                 </span><span class="high wxo-imperial-hide wxo-city-hidden" title="max">68&deg;<abbr title="Fahrenheit">F</abbr>
                 </span>
               </p>
@@ -488,7 +488,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
               </p>
               <p class="mrgn-bttm-0">Chance of showers</p>
             </td>
-            <td><img width="60" height="51" src="/web/20170625161729im_/http://weather.gc.ca/weathericons/06.gif" alt="Chance of showers" class="center-block" title="Chance of showers"><p class="mrgn-bttm-0"><span class="high wxo-metric-hide" title="max">24&deg;<abbr title="Celsius">C</abbr>
+            <td><img width="60" height="51" src="/weather/weathericons/06.gif" alt="Chance of showers" class="center-block" title="Chance of showers"><p class="mrgn-bttm-0"><span class="high wxo-metric-hide" title="max">24&deg;<abbr title="Celsius">C</abbr>
                 </span><span class="high wxo-imperial-hide wxo-city-hidden" title="max">75&deg;<abbr title="Fahrenheit">F</abbr>
                 </span>
               </p>
@@ -497,7 +497,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
               </p>
               <p class="mrgn-bttm-0">Chance of showers</p>
             </td>
-            <td><img width="60" height="51" src="/web/20170625161729im_/http://weather.gc.ca/weathericons/06.gif" alt="Chance of showers" class="center-block" title="Chance of showers"><p class="mrgn-bttm-0"><span class="high wxo-metric-hide" title="max">20&deg;<abbr title="Celsius">C</abbr>
+            <td><img width="60" height="51" src="/weather/weathericons/06.gif" alt="Chance of showers" class="center-block" title="Chance of showers"><p class="mrgn-bttm-0"><span class="high wxo-metric-hide" title="max">20&deg;<abbr title="Celsius">C</abbr>
                 </span><span class="high wxo-imperial-hide wxo-city-hidden" title="max">68&deg;<abbr title="Fahrenheit">F</abbr>
                 </span>
               </p>
@@ -506,7 +506,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
               </p>
               <p class="mrgn-bttm-0">Chance of showers</p>
             </td>
-            <td><img width="60" height="51" src="/web/20170625161729im_/http://weather.gc.ca/weathericons/06.gif" alt="Chance of showers" class="center-block" title="Chance of showers"><p class="mrgn-bttm-0"><span class="high wxo-metric-hide" title="max">23&deg;<abbr title="Celsius">C</abbr>
+            <td><img width="60" height="51" src="/weather/weathericons/06.gif" alt="Chance of showers" class="center-block" title="Chance of showers"><p class="mrgn-bttm-0"><span class="high wxo-metric-hide" title="max">23&deg;<abbr title="Celsius">C</abbr>
                 </span><span class="high wxo-imperial-hide wxo-city-hidden" title="max">73&deg;<abbr title="Fahrenheit">F</abbr>
                 </span>
               </p>
@@ -515,7 +515,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
               </p>
               <p class="mrgn-bttm-0">Chance of showers</p>
             </td>
-            <td><img width="60" height="51" src="/web/20170625161729im_/http://weather.gc.ca/weathericons/06.gif" alt="Chance of showers" class="center-block" title="Chance of showers"><p class="mrgn-bttm-0"><span class="high wxo-metric-hide" title="max">23&deg;<abbr title="Celsius">C</abbr>
+            <td><img width="60" height="51" src="/weather/weathericons/06.gif" alt="Chance of showers" class="center-block" title="Chance of showers"><p class="mrgn-bttm-0"><span class="high wxo-metric-hide" title="max">23&deg;<abbr title="Celsius">C</abbr>
                 </span><span class="high wxo-imperial-hide wxo-city-hidden" title="max">73&deg;<abbr title="Fahrenheit">F</abbr>
                 </span>
               </p>
@@ -524,7 +524,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
               </p>
               <p class="mrgn-bttm-0">Chance of showers</p>
             </td>
-            <td><img width="60" height="51" src="/web/20170625161729im_/http://weather.gc.ca/weathericons/06.gif" alt="Chance of showers" class="center-block" title="Chance of showers"><p class="mrgn-bttm-0"><span class="high wxo-metric-hide" title="max">23&deg;<abbr title="Celsius">C</abbr>
+            <td><img width="60" height="51" src="/weather/weathericons/06.gif" alt="Chance of showers" class="center-block" title="Chance of showers"><p class="mrgn-bttm-0"><span class="high wxo-metric-hide" title="max">23&deg;<abbr title="Celsius">C</abbr>
                 </span><span class="high wxo-imperial-hide wxo-city-hidden" title="max">73&deg;<abbr title="Fahrenheit">F</abbr>
                 </span>
               </p>
@@ -545,7 +545,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
           </tr>
           <tr>
           <tr>
-            <td><img width="60" height="51" src="/web/20170625161729im_/http://weather.gc.ca/weathericons/39.gif" alt="A few showers or thunderstorms" class="center-block" title="A few showers or thunderstorms"><p class="mrgn-bttm-0"><span class="low wxo-metric-hide" title="min">12&deg;<abbr title="Celsius">C</abbr>
+            <td><img width="60" height="51" src="/weather/weathericons/39.gif" alt="A few showers or thunderstorms" class="center-block" title="A few showers or thunderstorms"><p class="mrgn-bttm-0"><span class="low wxo-metric-hide" title="min">12&deg;<abbr title="Celsius">C</abbr>
                 </span><span class="low wxo-imperial-hide wxo-city-hidden" title="min">54&deg;<abbr title="Fahrenheit">F</abbr>
                 </span>
               </p>
@@ -554,7 +554,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
               </p>
               <p class="mrgn-bttm-0">A few showers or thunderstorms</p>
             </td>
-            <td><img width="60" height="51" src="/web/20170625161729im_/http://weather.gc.ca/weathericons/36.gif" alt="Chance of showers" class="center-block" title="Chance of showers"><p class="mrgn-bttm-0"><span class="low wxo-metric-hide" title="min">11&deg;<abbr title="Celsius">C</abbr>
+            <td><img width="60" height="51" src="/weather/weathericons/36.gif" alt="Chance of showers" class="center-block" title="Chance of showers"><p class="mrgn-bttm-0"><span class="low wxo-metric-hide" title="min">11&deg;<abbr title="Celsius">C</abbr>
                 </span><span class="low wxo-imperial-hide wxo-city-hidden" title="min">52&deg;<abbr title="Fahrenheit">F</abbr>
                 </span>
               </p>
@@ -563,7 +563,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
               </p>
               <p class="mrgn-bttm-0">Chance of showers</p>
             </td>
-            <td><img width="60" height="51" src="/web/20170625161729im_/http://weather.gc.ca/weathericons/36.gif" alt="Chance of showers" class="center-block" title="Chance of showers"><p class="mrgn-bttm-0"><span class="low wxo-metric-hide" title="min">12&deg;<abbr title="Celsius">C</abbr>
+            <td><img width="60" height="51" src="/weather/weathericons/36.gif" alt="Chance of showers" class="center-block" title="Chance of showers"><p class="mrgn-bttm-0"><span class="low wxo-metric-hide" title="min">12&deg;<abbr title="Celsius">C</abbr>
                 </span><span class="low wxo-imperial-hide wxo-city-hidden" title="min">54&deg;<abbr title="Fahrenheit">F</abbr>
                 </span>
               </p>
@@ -572,7 +572,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
               </p>
               <p class="mrgn-bttm-0">Chance of showers</p>
             </td>
-            <td><img width="60" height="51" src="/web/20170625161729im_/http://weather.gc.ca/weathericons/32.gif" alt="Cloudy periods" class="center-block" title="Cloudy periods"><p class="mrgn-bttm-0"><span class="low wxo-metric-hide" title="min">12&deg;<abbr title="Celsius">C</abbr>
+            <td><img width="60" height="51" src="/weather/weathericons/32.gif" alt="Cloudy periods" class="center-block" title="Cloudy periods"><p class="mrgn-bttm-0"><span class="low wxo-metric-hide" title="min">12&deg;<abbr title="Celsius">C</abbr>
                 </span><span class="low wxo-imperial-hide wxo-city-hidden" title="min">54&deg;<abbr title="Fahrenheit">F</abbr>
                 </span>
               </p>
@@ -581,7 +581,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
               </p>
               <p class="mrgn-bttm-0">Cloudy periods</p>
             </td>
-            <td><img width="60" height="51" src="/web/20170625161729im_/http://weather.gc.ca/weathericons/32.gif" alt="Cloudy periods" class="center-block" title="Cloudy periods"><p class="mrgn-bttm-0"><span class="low wxo-metric-hide" title="min">11&deg;<abbr title="Celsius">C</abbr>
+            <td><img width="60" height="51" src="/weather/weathericons/32.gif" alt="Cloudy periods" class="center-block" title="Cloudy periods"><p class="mrgn-bttm-0"><span class="low wxo-metric-hide" title="min">11&deg;<abbr title="Celsius">C</abbr>
                 </span><span class="low wxo-imperial-hide wxo-city-hidden" title="min">52&deg;<abbr title="Fahrenheit">F</abbr>
                 </span>
               </p>
@@ -590,7 +590,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
               </p>
               <p class="mrgn-bttm-0">Cloudy periods</p>
             </td>
-            <td><img width="60" height="51" src="/web/20170625161729im_/http://weather.gc.ca/weathericons/36.gif" alt="Chance of showers" class="center-block" title="Chance of showers"><p class="mrgn-bttm-0"><span class="low wxo-metric-hide" title="min">15&deg;<abbr title="Celsius">C</abbr>
+            <td><img width="60" height="51" src="/weather/weathericons/36.gif" alt="Chance of showers" class="center-block" title="Chance of showers"><p class="mrgn-bttm-0"><span class="low wxo-metric-hide" title="min">15&deg;<abbr title="Celsius">C</abbr>
                 </span><span class="low wxo-imperial-hide wxo-city-hidden" title="min">59&deg;<abbr title="Fahrenheit">F</abbr>
                 </span>
               </p>
@@ -617,7 +617,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
               <tbody>
                 <tr class="pdg-btm-0">
                   <td>
-                    <a href="/web/20170625161729/http://weather.gc.ca/forecast/hourly/on-118_metric_e.html">
+                    <a href="/weather/forecast/hourly/on-118_metric_e.html">
                       <strong title="Sunday">Today</strong>
                     </a>
                   </td>
