--- a/radar/xft-index_e.html
+++ b/radar/xft-index_e.html
@@ -184,19 +184,19 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
         '201706251510~XFT_PRECIPET_RAIN_A11Y_WEATHEROFFICE_ARC~PRECIPET,125,18,MPRATE_QPE,PRECIPET_QC_PARAMETERS_WXO:URP:XFT:RADAR:GIF',
       ],
   blobArray = [
-        '/lib/radar/image.php?time=25-JUN-17+01.20.50.225145+PM&site=XFT',
-        '/lib/radar/image.php?time=25-JUN-17+01.30.49.171911+PM&site=XFT',
-        '/lib/radar/image.php?time=25-JUN-17+01.40.48.344227+PM&site=XFT',
-        '/lib/radar/image.php?time=25-JUN-17+01.50.45.005327+PM&site=XFT',
-        '/lib/radar/image.php?time=25-JUN-17+02.00.45.700197+PM&site=XFT',
-        '/lib/radar/image.php?time=25-JUN-17+02.10.54.592851+PM&site=XFT',
-        '/lib/radar/image.php?time=25-JUN-17+02.20.51.003063+PM&site=XFT',
-        '/lib/radar/image.php?time=25-JUN-17+02.30.48.336901+PM&site=XFT',
-        '/lib/radar/image.php?time=25-JUN-17+02.40.51.169949+PM&site=XFT',
-        '/lib/radar/image.php?time=25-JUN-17+02.51.00.126236+PM&site=XFT',
-        '/lib/radar/image.php?time=25-JUN-17+03.00.49.388625+PM&site=XFT',
-        '/lib/radar/image.php?time=25-JUN-17+03.10.52.993992+PM&site=XFT',
-        '/lib/radar/image.php?time=25-JUN-17+03.20.41.350130+PM&site=XFT',
+        '/weather/radar/images/XFT-25-JUN-17-01.20.50.225145',
+        '/weather/radar/images/XFT-25-JUN-17-01.30.49.171911',
+        '/weather/radar/images/XFT-25-JUN-17-01.40.48.344227',
+        '/weather/radar/images/XFT-25-JUN-17-01.50.45.005327',
+        '/weather/radar/images/XFT-25-JUN-17-02.00.45.700197',
+        '/weather/radar/images/XFT-25-JUN-17-02.10.54.592851',
+        '/weather/radar/images/XFT-25-JUN-17-02.20.51.003063',
+        '/weather/radar/images/XFT-25-JUN-17-02.30.48.336901',
+        '/weather/radar/images/XFT-25-JUN-17-02.40.51.169949',
+        '/weather/radar/images/XFT-25-JUN-17-02.51.00.126236',
+        '/weather/radar/images/XFT-25-JUN-17-03.00.49.388625',
+        '/weather/radar/images/XFT-25-JUN-17-03.10.52.993992',
+        '/weather/radar/images/XFT-25-JUN-17-03.20.41.350130',
       ],
   index_end = 12,
   index_start = 0,
