--- a/radar/xft-index_e.html
+++ b/radar/xft-index_e.html
@@ -912,13 +912,13 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 <script src="/weather/wet-boew/js/ie8-wet-boew2.min.js"></script>
 
 <![endif]-->
-<script src="/weather/GCWeb/js/theme.min.js"></script>
-<script src="/weather/cacheable/js/city/jquery-ui-1.10.3.custom.min.js"></script>
-<script src="/weather/cacheable/js/city/availableTags_e.min.js"></script>
-<script src="/weather/GCWeb/js/deps/jquery.dataTables.min.js"></script>
-<script src="/weather/cacheable/js/myprofile/alerts-1.0.min.js"></script>
-<script src="/weather/cacheable/js/myprofile/refresher-1.0.min.js"></script>
-<script type="text/javascript" src="/weather/city/js/cityjump.js"></script>
-<script src="/weather/GCWeb/js/theme.min.js"></script>
+<script type="text/javascript" src="/weather/cacheable/js/radar/init.js"></script>
+<script src="/weather/cacheable/js/responsive/jquery.rwdImageMaps.js"></script>
+<script src="/weather/cacheable/js/radar/cities_overlay.js"></script>
+<script src="/weather/cacheable/js/radar/intensity_scale_local.js"></script>
+<script src="/weather/cacheable/js/radar/cookie_manager.js"></script>
+<script src="/weather/cacheable/js/radar/xmlhttpifr.js"></script> 
+<script src="/weather/cacheable/js/radar/radar_controller.js"></script>
+<script src="/weather/cacheable/js/radar/Animator.js"></script>
 </body>
 </html>
