--- a/index.html
+++ b/index.html
@@ -120,7 +120,21 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 
 <ul>
 <li><a href="https://gc-proto.github.io/weather/index_e.html">Weather topic page</a></li>
-<li><a href="https://gc-proto.github.io/weather/city/pages/on-118_metric_e">Ottawa city page</a></li>
+<li><a href="https://gc-proto.github.io/weather/city/pages/on-118_metric_1_e">Ottawa - Thunderstorm</a></li>
+  <li><a href="https://gc-proto.github.io/weather/radar/xft-index_1_e.html">Franktown radar - Thunderstorm</a></li>
+  <li><a href="https://gc-proto.github.io/weather/lightning/index_1_e.html">Canada lightning map - Thunderstorm</a></li>
+  <li><a href="https://gc-proto.github.io/weather/weather/lightning/ONT-index_1_e.html">Ontario lightning map - Thunderstorm</a></li>
+  <li><a href="https://gc-proto.github.io/weather/warnings/ottawa-report_1_e.html">Ottawa alert - Thunderstorm</a></li>
+<li><a href="https://gc-proto.github.io/weather/city/pages/on-118_metric_2_e">Ottawa - Snowfall</a></li>
+  <li><a href="https://gc-proto.github.io/weather/radar/xft-index_2_e.html">Franktown radar - Snowfall</a></li>
+  <li><a href="https://gc-proto.github.io/weather/warnings/ottawa-report_2_e.html">Ottawa alert - Snowfall</a></li>
+<li><a href="https://gc-proto.github.io/weather/city/pages/on-118_metric_3_e">Ottawa - Smog</a></li>
+  <li><a href="https://gc-proto.github.io/weather/airquality/pages/onaq-008_e.html">Franktown radar - Smog</a></li>
+  <li><a href="https://gc-proto.github.io/weather/warnings/ottawa-report_3_e.html">Ottawa alert - Smog</a></li>
+ </ul>
+  
+  
+  
 </section>
 <div class="row pagedetails">
 <div class="col-sm-6 col-lg-4 mrgn-tp-sm">
