--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 <section>
 <p>List the associated pages here for easy reference </p>
 
-<h3>Navigation<h3>
+<h3>Navigation</h3>
 <ul>
 <li><a href="https://gc-proto.github.io/weather/index_e.html">Weather topic page</a></li>
 <ul>
