--- a/index.html
+++ b/index.html
@@ -142,6 +142,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 <h3>Smog scenario</h3>  
 <ul>
 <li><a href="https://gc-proto.github.io/weather/city/pages/on-118_metric_3_e">Ottawa - Smog</a></li>
+<li><a href="https://gc-proto.github.io/weather/warnings/ottawa-report_3_e.html">Ottawa alert - Smog</a></li>
 <li><a href="https://gc-proto.github.io/weather/airquality/pages/onaq-008_e.html">Franktown radar - Smog</a></li>
 </ul>
    
