--- a/city/pages/on-118_metric_3_e.html
+++ b/city/pages/on-118_metric_3_e.html
@@ -473,7 +473,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
             </th>
           </tr>
           <tr>
-            <td><img width="60" height="51" src="/weather/weathericons/44.gif" alt="Smoke" class="center-block" title="Smoke"><p class="mrgn-bttm-0"><span class="high wxo-metric-hide" title="max">25&deg;<abbr title="Celsius">C</abbr>
+            <td><img width="60" height="51" src="/weather/weathericons/44.png" alt="Smoke" class="center-block" title="Smoke"><p class="mrgn-bttm-0"><span class="high wxo-metric-hide" title="max">25&deg;<abbr title="Celsius">C</abbr>
                 </span><span class="high wxo-imperial-hide wxo-city-hidden" title="max">77&deg;<abbr title="Fahrenheit">F</abbr>
                 </span>
               </p>
@@ -482,7 +482,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
               </p>
               <p class="mrgn-bttm-0">Smoke</p>
             </td>
-            <td><img width="60" height="51" src="/weather/weathericons/44.gif" alt="Smoke" class="center-block" title="Smoke"><p class="mrgn-bttm-0"><span class="high wxo-metric-hide" title="max">27&deg;<abbr title="Celsius">C</abbr>
+            <td><img width="60" height="51" src="/weather/weathericons/44.png" alt="Smoke" class="center-block" title="Smoke"><p class="mrgn-bttm-0"><span class="high wxo-metric-hide" title="max">27&deg;<abbr title="Celsius">C</abbr>
                 </span><span class="high wxo-imperial-hide wxo-city-hidden" title="max">81&deg;<abbr title="Fahrenheit">F</abbr>
                 </span>
               </p>
@@ -547,7 +547,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
             <th class="blankcell" scope="col"> </th>
           </tr>
           <tr>
-            <td><img width="60" height="51" src="/weather/weathericons/44.gif" alt="Smoke" class="center-block" title="Smoke"><p class="mrgn-bttm-0"><span class="low wxo-metric-hide" title="min">18&deg;<abbr title="Celsius">C</abbr>
+            <td><img width="60" height="51" src="/weather/weathericons/44.png" alt="Smoke" class="center-block" title="Smoke"><p class="mrgn-bttm-0"><span class="low wxo-metric-hide" title="min">18&deg;<abbr title="Celsius">C</abbr>
                 </span><span class="low wxo-imperial-hide wxo-city-hidden" title="min">64&deg;<abbr title="Fahrenheit">F</abbr>
                 </span>
               </p>
@@ -724,7 +724,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
         <section>
           <h3 class="h5 mrgn-lft-md hidden-print"><span class="wb-inv">Detailed Forecast</span>Issued: 5:00 AM PDT Wednesday 2 August 2017</h3>
           <div class="row">
-            <div class="col-xs-6"><img width="60" height="51" src="/weather/weathericons/44.gif" alt="Smoke" class="pull-right" title="Smoke"></div>
+            <div class="col-xs-6"><img width="60" height="51" src="/weather/weathericons/44.png" alt="Smoke" class="pull-right" title="Smoke"></div>
             <div class="col-xs-6">
               <a href="/weather/forecast/hourly/bc-74_metric_e.html">
                 <strong title="Wednesday">Today</strong>
@@ -738,7 +738,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
             <div class="col-xs-12 brdr-bttm mrgn-bttm-md">Sunny. Widespread smoke. Windy near the water. High 25 except 31 inland. Humidex 32. UV index 8 or very high.</div>
           </div>
           <div class="row">
-            <div class="col-xs-6"><img width="60" height="51" src="/weather/weathericons/44.gif" alt="Smoke" class="pull-right" title="Smoke"></div>
+            <div class="col-xs-6"><img width="60" height="51" src="/weather/weathericons/44.png" alt="Smoke" class="pull-right" title="Smoke"></div>
             <div class="col-xs-6">
               <strong title="Wednesday night">Tonight</strong>
               <br><span class="low wxo-metric-hide" title="min">18&deg;<abbr title="Celsius">C</abbr>
@@ -750,7 +750,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
             <div class="col-xs-12 brdr-bttm mrgn-bttm-md">Clear. Widespread smoke. Windy near the water. Low 18.</div>
           </div>
           <div class="row">
-            <div class="col-xs-6"><img width="60" height="51" src="/weather/weathericons/44.gif" alt="Smoke" class="pull-right" title="Smoke"></div>
+            <div class="col-xs-6"><img width="60" height="51" src="/weather/weathericons/44.png" alt="Smoke" class="pull-right" title="Smoke"></div>
             <div class="col-xs-6">
               <strong>
                 <abbr title="Thursday">Thu</abbr>, 3 <abbr title="August">Aug</abbr>
