--- a/warnings/ottawa-report_2_e.html
+++ b/warnings/ottawa-report_2_e.html
@@ -1,62 +1,42 @@
-<!DOCTYPE html>
-<!--[if lt IE 9]><html class="no-js lt-ie9" lang="en" dir="ltr"><![endif]-->
-<!--[if gt IE 8]><!-->
+
+<!DOCTYPE html><!--[if lt IE 9]><html class="no-js lt-ie9" lang="en" dir="ltr"><![endif]--><!--[if gt IE 8]><!-->
 <html class="no-js" lang="en" dir="ltr">
-<!--<![endif]--><head><script type="text/javascript" src="/static/js/analytics.js?v=1500596387.0" charset="utf-8"></script>
-
-<script type="text/javascript">archive_analytics.values.service='wb';archive_analytics.values.server_name='wwwb-app19.us.archive.org';archive_analytics.values.server_ms=670;</script><script type="text/javascript" src="/static/js/wbhack.js?v=1500596387.0" charset="utf-8"></script>
-
-<script type="text/javascript">
-__wbhack.init('https://web.archive.org/web');
-</script>
-<link rel="stylesheet" type="text/css" href="/static/css/banner-styles.css?v=1500596387.0" />
-<link rel="stylesheet" type="text/css" href="/static/css/iconochive.css?v=1500596387.0" />
-
-<!-- End Wayback Rewrite JS Include -->
-		<meta charset="utf-8"/>
-		<!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW)
-		wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-		<meta content="width=device-width, initial-scale=1" name="viewport"/>
-		<meta name="dcterms.creator" content="Environment Canada"/>
-		<meta name="dcterms.language" title="ISO639-2" content="eng"/>
-	<title>Alerts for: City of Ottawa - Environment Canada</title>
-	<meta name="dcterms.title" content="Alerts for: City of Ottawa - Environment Canada"/>
-	<meta name="description" content="When severe weather threatens, Environment Canada issues alerts that notify those in affected areas in Ontario - south so that they can take steps to protect themselves and their property from harm.  The type of alert issued depends on the severity and timing of the event. Special statements: issued to highlight significant weather or express uncertainty. Watches: alert you about weather conditions that are favourable for a storm or severe weather, which could cause safety concerns.  Warning: an urgent message that severe weather is either occurring or will occur. Warnings are usually issued six to 24 hours in advance, although some severe weather (such as thunderstorms and tornadoes) can occur rapidly, with less than a half hours' notice."/>
-	<meta name="dcterms.subject" title="scheme" content="meteorology;weather;weather alert;weather forecasts"/>
-	<meta name="dcterms.issued" title="W3CDTF" content="2013-04-16"/>
-	<meta name="dcterms.modified" title="W3CDTF" content="2016-11-17"/>
-			<!-- Meta data-->
-		<!--[if gte IE 9 | !IE ]><!-->
-<link href="/web/20161221204519im_/http://weather.gc.ca/template/gcweb/v4.0.22/assets/favicon.ico" rel="icon" type="image/x-icon"/>
-<link rel="stylesheet" href="/web/20161221204519cs_/http://weather.gc.ca/template/gcweb/v4.0.22/css/theme.min.css"/>
 <!--<![endif]-->
-
+<head>
+<meta charset="utf-8">
+<!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW)
+wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
+<title>Ottawa (Kanata - Orléans), ON - 7 Day Forecast - Environment Canada</title>
+<meta content="width=device-width,initial-scale=1" name="viewport">
+<!-- Meta data -->
+<meta name="description" content="Web Experience Toolkit (WET) includes reusable components for building and maintaining innovative Web sites that are accessible, usable, and interoperable. These reusable components are open source software and free for use by departments and external Web communities">
+<!-- Meta data-->
+<!--[if gte IE 9 | !IE ]><!-->
+<link href="/weather/GCWeb/assets/favicon.ico" rel="icon" type="image/x-icon">
+<link rel="stylesheet" href="/weather/GCWeb/css/theme.min.css">
+<!--<![endif]-->
 <!--[if lt IE 9]>
-<link href="/template/gcweb/v4.0.22/assets/favicon.ico" rel="shortcut icon" />
+<link href="/weather/GCWeb/assets/favicon.ico" rel="shortcut icon" />
 
-<link rel="stylesheet" href="/template/gcweb/v4.0.22/css/ie8-wet-boew.min.css" />
-<link rel="stylesheet" href="/template/wxo/css/wxo-ie8.css"/>
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-<script src="/template/gcweb/v4.0.22/js/ie8-wet-boew.min.js"></script>
+<link rel="stylesheet" href="/weather/GCWeb/css/ie8-theme.min.css" />
+<link rel="stylesheet" href="/cacheable/css/city/jquery-ui-1.10.3.custom.min.css">
+<script src="/weather/wet-boew/js/ie8-wet-boew.min.js"></script>
 <![endif]-->
 <!--[if lte IE 9]>
 
-<![endif]-->
 
-<noscript><link rel="stylesheet" href="/web/20161221204519cs_/http://weather.gc.ca/template/gcweb/v4.0.22/css/noscript.min.css"/></noscript>
+<![endif]-->
+<noscript><link rel="stylesheet" href="/weather/wet-boew/css/noscript.min.css" /></noscript>
 <!-- Google Tag Manager DO NOT REMOVE OR MODIFY - NE PAS SUPPRIMER OU MODIFIER -->
 <script>dataLayer1 = [];</script>
 <!-- End Google Tag Manager -->
-<link rel="stylesheet" href="/web/20161221204519cs_/http://weather.gc.ca/cacheable/css/city/jquery-ui-1.10.3.custom.min.css"/>
-<link rel="stylesheet" href="/web/20161221204519cs_/http://weather.gc.ca/template/wxo/css/wxo.css"/>
-<link rel="alternate" type="application/atom+xml" title="ATOM feed for Weather Alert - Environment Canada" href="/web/20161221204519/http://weather.gc.ca/rss/battleboard/on41_e.xml"/>
-	<link rel="stylesheet" type="text/css" href="/web/20161221204519cs_/http://weather.gc.ca/warnings/css/warnings.css"/>
-	</head>
-	<body vocab="http://schema.org/" typeof="WebPage">
-	<!-- Google Tag Manager DO NOT REMOVE OR MODIFY - NE PAS SUPPRIMER OU MODIFIER -->
-<noscript><iframe title="Google Tag Manager" src="//web.archive.org/web/20161221204519if_/http://www.googletagmanager.com/ns.html?id=GTM-TLGQ9K" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start': new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0], j=d.createElement(s),dl=l!='dataLayer1'?'&l='+l:'';j.async=true;j.src='//web.archive.org/web/20161221204519/http://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);})(window,document,'script','dataLayer1','GTM-TLGQ9K');</script>
+</head>
+<body vocab="http://schema.org/" typeof="WebPage">
+<!-- Google Tag Manager DO NOT REMOVE OR MODIFY - NE PAS SUPPRIMER OU MODIFIER -->
+<noscript><iframe title="Google Tag Manager" src="//www.googletagmanager.com/ns.html?id=GTM-TLGQ9K" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start': new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0], j=d.createElement(s),dl=l!='dataLayer1'?'&l='+l:'';j.async=true;j.src='//www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);})(window,document,'script','dataLayer1','GTM-TLGQ9K');</script>
 <!-- End Google Tag Manager -->
+
 
 <ul id="wb-tphp">
 	<li class="wb-slc">
